# ScreenTranslator

./: .gitattributes  .gitignore  package.json
src/: image_viewer.html  index.html  loading.html  results.html  screenshot.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  commands.rs  main.rs  settings.rs  translator.rs
src/css/: style.css
src/js/: image_viewer.js  main.js  results.js  screenshot.js
