[package]
name = "src-tauri"
version = "0.1.0"
description = "A Tauri-based screenshot translator"
authors = ["cc"]
license = "MIT"
repository = "https://github.com/git-hub-cc/ScreenTranslator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri 核心库，并开启所有需要的功能
tauri = { version = "1.6", features = [ "clipboard-write-text",
    "window-all",         # 开启所有窗口管理功能
    "shell-sidecar",      # 允许执行绑定的外部程序
    "global-shortcut-all",# 允许注册全局快捷键
    "fs-all",             # 开启所有文件系统操作权限
    "path-all",           # 开启所有路径解析权限
    "system-tray",        # 开启系统托盘功能
    "http-request",       # 允许发起HTTP请求 (此功能可能仍用于其他地方，暂时保留)
    "notification-all"] }
# Tauri 插件：用于管理开机自启动
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# Serde: 用于序列化和反序列化数据（例如 JSON）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tokio: 异步运行时，用于处理耗时操作
tokio = { version = "1", features = ["full"] }

# xcap: 用于现代化的屏幕捕获
xcap = " 0.8.1"

# image: 图像处理库
image = "0.25"
# --- 新增依赖：直接引入 png 库以访问其高级编码选项，用于性能优化 ---
png = "0.17"

# Arboard: 用于跨平台剪切板操作
arboard = "3"

# once_cell: 用于安全地初始化全局静态变量
once_cell = "1.19"
async-trait = "0.1.89"

# Base64: 用于将图片数据编码，以便安全地通过事件发送给前端
base64 = "0.22"

# encoding_rs: 用于处理 GBK <-> UTF-8 编码转换
encoding_rs = "0.8"


[features]
# 生产构建时需要此特性，请勿移除！
custom-protocol = ["tauri/custom-protocol"]
